# cpp-graphics

./: .gitignore  CMakeLists.txt  README.md
examples/hello_macgl/: AppDelegate.h  AppDelegate.mm  CMakeLists.txt  GLView.h  GLView.mm  default_fragment.glsl  default_vertex.glsl
examples/hello_metal/: AppDelegate.mm  CMakeLists.txt  Renderer.h  Renderer.mm  main.mm  shader.metal
examples/shared/: decl.inc  init.inc  render.inc  update.inc
include/graphics/: descriptors.hpp  graphics.hpp
include/graphics/metal/: context.hpp  dynamicbuffer.hpp  rendertarget.hpp  state.hpp  staticbuffer.hpp  texture.hpp
include/graphics/opengl/: context.hpp  dynamicbuffer.hpp  gl.hpp  glad.h  rendertarget.hpp  state.hpp  staticbuffer.hpp  texture.hpp
include/util/: debug.hpp  os.hpp
src/graphics/metal/: context.mm  convert.hpp  convert.mm  dynamicbuffer.mm  rendertarget.mm  state.mm  staticbuffer.mm  texture.mm
src/graphics/opengl/: context.cpp  convert.cpp  convert.hpp  dynamicbuffer.cpp  glad.c  rendertarget.cpp  state.cpp  staticbuffer.cpp
